--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-session": "^1.19.0",
+    "express-validation": "^4.1.1",
+    "express-validator": "^7.3.1",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.5",
     "pg": "^8.16.3"
